Possible fix to iterators

--- a/test/fixtures/test-12.html
+++ b/test/fixtures/test-12.html
@@ -1,1 +1,1 @@
-<ul><li class="name"><span class="first"></span><span class="middle"></span><span class="last"></span></li></ul>
+<ul class="name"><li><span class="first"></span>:<span class="middle"></span><span class="last"></span></li></ul>
