--- a/test/fixtures/test-12.html
+++ b/test/fixtures/test-12.html
@@ -1,1 +1,1 @@
-<ul class="names"><li><span class="first"></span>:<span class="middle"></span><span class="last"></span></li></ul>
+<ul class="names"><li><span class="first"></span><span class="middle"></span><span class="last"></span><p class="occupation"><strong class="title"></strong><span class="pay"></span></p></li></ul>
