Phew...! Gets test cases 13 and 14 to pass

--- a/test/fixtures/test-13.html
+++ b/test/fixtures/test-13.html
@@ -1,1 +1,1 @@
-<table class="names"><tr><td class="first"></td><td class="last"></td></tr></table>
+<table><tr class="names"><td class="first"></td><td class="last"></td></tr></table>
