--- a/test/fixtures/test-12.html
+++ b/test/fixtures/test-12.html
@@ -1,1 +1,11 @@
-<ul><li class="names"><span class="first"></span><span class="middle"></span><span class="last"></span><p class="occupation"><strong class="title"></strong><span class="pay"></span></p></li></ul>
+<ul>
+	<li class="names">
+		<span class="first"></span>
+		<span class="middle"></span>
+		<span class="last"></span>
+		<p class="occupation">
+			<strong class="title"></strong>
+			<span class="pay"></span>
+		</p>
+	</li>
+</ul>
