--- a/test/fixtures/test-13.html
+++ b/test/fixtures/test-13.html
@@ -1,1 +1,6 @@
-<table><tr class="names"><td class="first"></td><td class="last"></td></tr></table>
+<table>
+	<tr class="names">
+		<td class="first"></td>
+		<td class="last"></td>
+	</tr>
+</table>
