--- a/test/fixtures/test-14.html
+++ b/test/fixtures/test-14.html
@@ -1,1 +1,7 @@
-<ul><li class="names"><span class="first"></span><span class="middle"></span><span class="last"></span></li></ul>
+<ul>
+	<li class="names">
+		<span class="first"></span>
+		<span class="middle"></span>
+		<span class="last"></span>
+	</li>
+</ul>
