[test] Clean up iteration tests

--- a/test/fixtures/test-16.html
+++ b/test/fixtures/test-16.html
@@ -1,1 +1,5 @@
-<b>Flatiron Components</b><br /><ul><li class='components'></li></ul>
+<b>Flatiron Components</b>
+<br/>
+<ul>
+  <li class='components'></li>
+</ul>
