--- a/test/fixtures/test-15.html
+++ b/test/fixtures/test-15.html
@@ -1,2 +1,8 @@
 <a href="placeholder">Link</a>
-<ul><li class="names"><span class="first"></span><span class="middle"></span><span class="last"></span></li></ul>
+<ul>
+  <li class="names">
+    <span class="first"></span>
+    <span class="middle"></span>
+    <span class="last"></span>
+  </li>
+</ul>
