--- a/test/fixtures/test-3.html
+++ b/test/fixtures/test-3.html
@@ -1,1 +1,1 @@
-<div id="key1"><!-- foo --><div id="key2"></div><img src="/"/></div>
+<div id="key1" style="visible: foobar > 1"><!-- foo --><div id="key2"></div><img src="/"/></div>
