--- a/test/browser.html
+++ b/test/browser.html
@@ -3,6 +3,7 @@
   <title>Plates browser tests</title>
   <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-git.css" />
   <script src="http://code.jquery.com/qunit/qunit-git.js"></script>
+  <script src="http://bestiejs.github.com/json3/lib/json3.js"></script>
   <script src="../lib/plates.js"></script>
 </head>
 <body>
@@ -555,6 +556,23 @@
 
 </script>
 <script>
+var ws = "\x09\x0A\x0B\x0C\x0D\x20\xA0\u1680\u180E\u2000\u2001\u2002\u2003" +
+    "\u2004\u2005\u2006\u2007\u2008\u2009\u200A\u202F\u205F\u3000\u2028" +
+    "\u2029\uFEFF";
+if (!String.prototype.trim || ws.trim()) {
+    // http://blog.stevenlevithan.com/archives/faster-trim-javascript
+    // http://perfectionkills.com/whitespace-deviations/
+    ws = "[" + ws + "]";
+    var trimBeginRegexp = new RegExp("^" + ws + ws + "*"),
+        trimEndRegexp = new RegExp(ws + ws + "*$");
+    String.prototype.trim = function trim() {
+        if (this === undefined || this === null) {
+            throw new TypeError("can't convert "+this+" to object");
+        }
+        return String(this).replace(trimBeginRegexp, "").replace(trimEndRegexp, "");
+    };
+}
+
 var common = {
   createTest: function (name, map) {
     var html = document.getElementById(name + '.html').innerHTML
@@ -563,7 +581,11 @@ var common = {
 
     var result = Plates.bind(html, data, map);
 
-    assert.equal(result.trim(), out.trim(), 'Expecting stuff');
+    assert.equal(
+        result.trim().replace(/[\n|\r]/g, '')
+      , out.trim().replace(/[\n|\r]/g, '')
+      , 'Expecting `' + html + '` to equal `' + out + '`'
+    );
   }
 }
 module("merge data into markup, when providing both data and markup");
@@ -632,7 +654,7 @@ test("(10) a map that defines creating missing attributes.", function () {
       create: true
     });
 
-    map.class('logo').use('url').as('src');
+    map.className('logo').use('url').as('src');
     map.where('name').is('first_name').use('fname').as('value');
     map.where('name').is('last_name').use('lname').as('value');
 
@@ -660,7 +682,7 @@ test("(13) attributes can contain valid characters", function () {
 
 test("(14) It should be able to iterate over collections with maps", function () {
     var map = Plates.Map();
-    map.class("names").use("names");
+    map.className("names").use("names");
 
     return common.createTest('test-14', map);
 });
@@ -668,7 +690,7 @@ test("(14) It should be able to iterate over collections with maps", function ()
 test("(15) It should be able to iterate over collections with multiple maps", function () {
     var map = Plates.Map();
     map.where("href").is("placeholder").insert("link");
-    map.class("names").use("names");
+    map.className("names").use("names");
 
     return common.createTest('test-15', map);
 });
@@ -683,8 +705,8 @@ test("(17) It should be able to iterate over deeply nested objects", function ()
 
 test("(18) It should be able to see the classnames properly", function () {
     var map = Plates.Map();
-    map.class("username").use("username");
-    map.class("name").use("name");
+    map.className("username").use("username");
+    map.className("name").use("name");
 
     return common.createTest('test-18', map);
 });
@@ -705,7 +727,7 @@ test("(20) Replace partial value with a new value from the data object", functio
 
 test("(21) Remove should remove the whole element", function () {
     var map = Plates.Map();
-    map.class('remove').remove();
+    map.className('remove').remove();
 
     return common.createTest('test-21', map);
 });
@@ -726,7 +748,7 @@ test("(23) Remove should remove self closing elements without optional ending sl
 
 test("(24) Should append new templates", function () {
     var map = Plates.Map();
-    map.class('insert').append('<div class="trolling"></div>');
+    map.className('insert').append('<div class="trolling"></div>');
 
     return common.createTest('test-24', map);
 });
@@ -735,8 +757,8 @@ test("(25) New templates should also process map and custom data", function () {
     var map = Plates.Map();
     var partial = Plates.Map();
 
-    partial.class('trolling').to('boink');
-    map.class('insert').append('<div class="trolling"></div>', { boink: 'moo' }, partial);
+    partial.className('trolling').to('boink');
+    map.className('insert').append('<div class="trolling"></div>', { boink: 'moo' }, partial);
 
     return common.createTest('test-25', map);
 });
@@ -745,8 +767,8 @@ test("(26) When the data for the partial was provided as a string, get it from t
     var map = Plates.Map();
     var partial = Plates.Map();
 
-    partial.class('trolling').to('boink');
-    map.class('insert').append('<div class="trolling"></div>', 'partial', partial);
+    partial.className('trolling').to('boink');
+    map.className('insert').append('<div class="trolling"></div>', 'partial', partial);
 
     return common.createTest('test-26', map);
 });
@@ -755,7 +777,7 @@ test("(27) append should read from file system if no template has been provided"
     var map = Plates.Map();
     var partial = Plates.Map();
 
-    map.class('insert').append('partial-1.html');
+    map.className('insert').append('partial-1.html');
 
     return common.createTest('test-27', map);
 });
@@ -764,7 +786,7 @@ test("(28) it should repeat the partial for each item in the array", function ()
     var map = Plates.Map();
     var partial = Plates.Map();
 
-    map.class('insert').append('partial-1.html', [{}, {}, {}]);
+    map.className('insert').append('partial-1.html', [{}, {}, {}]);
 
     return common.createTest('test-28', map);
 });
