[fix] We did not do any attribute testing for the append/remove methods. So it just checked if the attr existed.

--- a/test/browser.html
+++ b/test/browser.html
@@ -737,7 +737,7 @@ test("(20) Replace partial value with a new value from the data object", functio
 
 test("(21) Remove should remove the whole element", function () {
   var map = Plates.Map();
-  map.className('remove').remove();
+  map.className('removed').remove();
 
   return common.createTest('test-21', map);
 });
