Fix browser tests all failing with latest QUnit, 'assert' global was removed in version 1.11.0.

--- a/test/browser.html
+++ b/test/browser.html
@@ -607,7 +607,7 @@ var common = {
 
     var result = Plates.bind(html, data, map);
 
-    assert.equal(
+    QUnit.assert.equal(
         result.trim().replace(/[\n|\r]/g, '')
       , out.trim().replace(/[\n|\r]/g, '')
       , 'Expecting `' + html + '` to equal `' + out + '`'
