--- a/test/browser.html
+++ b/test/browser.html
@@ -1032,7 +1032,9 @@ test("(13) attributes can contain valid characters", function () {
 
 test("(14) It should be able to iterate over collections with maps", function () {
   var map = Plates.Map();
-  map.className("names").use("names");
+  map.class("names").use("names");
+  map.class("first").use("first");
+  map.class("last").use("last");
 
   return common.createTest('test-14', map);
 });
@@ -1040,7 +1042,10 @@ test("(14) It should be able to iterate over collections with maps", function ()
 test("(15) It should be able to iterate over collections with multiple maps", function () {
   var map = Plates.Map();
   map.where("href").is("placeholder").insert("link");
-  map.className("names").use("names");
+  map.class("names").use("names");
+  map.class("first").use("first");
+  map.class("middle").use("middle");
+  map.class("last").use("last");
 
   return common.createTest('test-15', map);
 });
