Fixes parsing attributes containing = and ' characters without ids

--- a/test/fixtures/test-43.html
+++ b/test/fixtures/test-43.html
@@ -1,4 +1,5 @@
 <div>
   <div id="include" data-ng-include="'path/to/partial'"></div>
   <div id="show" data-ng-show="svc.prop == 'val'"></div>
+  <div data-ng-show="tabSvc.tab == 'locations'">Don't Touch Me</div>
 </div>
